--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.10.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
@@ -8,6 +9,7 @@ asyncio==3.4.3
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+bitsandbytes==0.46.1
 build==1.3.0
 cachetools==5.5.2
 certifi==2025.7.14
@@ -19,7 +21,10 @@ colorama==0.4.6
 coloredlogs==15.0.1
 cryptography==45.0.5
 dataclasses-json==0.6.7
+datasets==4.0.0
+dill==0.3.8
 distro==1.9.0
+docstring_parser==0.17.0
 durationpy==0.10
 exceptiongroup==1.3.0
 fastapi==0.116.1
@@ -27,9 +32,12 @@ filelock==3.13.1
 flatbuffers==25.2.10
 frozenlist==1.7.0
 fsspec==2024.6.1
+gitdb==4.0.12
+GitPython==3.1.45
 google-auth==2.40.3
 googleapis-common-protos==1.70.0
 greenlet==3.2.3
+gritql==0.2.0
 grpcio==1.74.0
 h11==0.16.0
 httpcore==1.0.9
@@ -51,9 +59,11 @@ jwt==1.4.0
 kubernetes==33.1.0
 langchain==0.3.27
 langchain-chroma==0.2.5
+langchain-cli==0.0.36
 langchain-community==0.3.27
 langchain-core==0.3.72
 langchain-text-splitters==0.3.9
+langserve==0.3.1
 langsmith==0.4.10
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -62,9 +72,10 @@ mdurl==0.1.2
 mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.6.3
+multiprocess==0.70.16
 mypy_extensions==1.1.0
 networkx==3.3
-numpy==2.1.2
+numpy==1.26.4
 oauthlib==3.3.1
 onnxruntime==1.22.1
 opentelemetry-api==1.36.0
@@ -76,12 +87,16 @@ opentelemetry-semantic-conventions==0.57b0
 orjson==3.11.1
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.1
 passlib==1.7.4
+peft==0.17.0
 pillow==11.0.0
 pip==25.2
 posthog==5.4.0
 propcache==0.3.2
 protobuf==6.31.1
+psutil==7.0.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
@@ -98,6 +113,7 @@ pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
@@ -113,30 +129,38 @@ scipy==1.15.3
 sentence-transformers==5.0.0
 setuptools==65.5.0
 shellingham==1.5.4
+shtab==1.7.2
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.42
+sse-starlette==1.8.2
 starlette==0.47.2
 sympy==1.13.3
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.2
 tomli==2.2.1
-torch==2.7.1+cu126
-torchaudio==2.7.1+cu126
-torchvision==0.22.1+cu126
+tomlkit==0.13.3
+torch==2.8.0+cu126
+torchvision==0.23.0+cu126
 tqdm==4.67.1
-transformers==4.54.0
+transformers==4.55.0
+trl==0.9.6
+typeguard==4.4.4
 typer==0.16.0
-typing_extensions==4.12.2
+typing_extensions==4.14.1
 typing-inspect==0.9.0
 typing-inspection==0.4.1
+tyro==0.9.28
+tzdata==2025.2
 unicorn==2.1.3
 urllib3==2.5.0
 uvicorn==0.35.0
 watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
+xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.23.0
